--- a/index.html
+++ b/index.html
@@ -24,4 +24,8 @@
   <!-- JavaScript -->
   <script src="script.js"></script>
 </body>
+<div class="header-container">
+    <a href="https://wa.me/21626990263?text=Bonjour,%20je%20voudrais%20vous%20appeler%20sur%20WhatsApp"
+        target="_blank" class="whatsapp-link">Call Us: +21651679495</a>
+</div>
 </html>
